# Tessy

./: CMakeLists.txt  main.cpp  videoOCR_V1.py
